tests/bad_pub_block.sl
// Verifies bad pub block.
pub {
    fn Foo() i32
}
